[package]
name = "evm-accounts"
authors = ['Clover Network <https://github.com/clover-network>']
edition = "2021"
license = 'GPL-3.0'
homepage = 'https://clover.finance'
repository = 'https://github.com/clover-network/clover'
version = '0.9.0'

[dependencies]
codec = { package = "parity-scale-codec", version = "3", default-features = false }
scale-info = { version = "2", default-features = false, features = ["derive"] }
frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26" , default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26" , default-features = false }
libsecp256k1 = { version = "0.3.4", default-features = false, features = ["hmac"] }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26" , default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26" , default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26" , default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26" , default-features = false }
fp-evm = { default-features = false, git = "https://github.com/clover-network/frontier.git", branch = "pangwa/substrate-v0.9.26" }
pallet-evm = { default-features = false, git = "https://github.com/clover-network/frontier.git", branch = "pangwa/substrate-v0.9.26" }
impl-trait-for-tuples = "0.1.3"
clover-traits = { path = "../../modules/traits", default-features = false }

[dev-dependencies]
pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"  }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"libsecp256k1/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-io/std",
	"sp-std/std",
	"frame-support/std",
	"frame-system/std",
	"fp-evm/std",
	"pallet-evm/std",
]
