[package]
name = "evm-bridge"
authors = ['Clover Network <https://github.com/clover-network>']
edition = '2018'
license = 'GPL-3.0'
homepage = 'https://cloverdefi.com'
repository = 'https://github.com/clover-network/clover'
version = '0.9.0'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.101", optional = true, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false }
frame-support = { version = "2.0.0", default-features = false }
frame-system = { version = "2.0.0", default-features = false }
sp-core = { version = "2.0.0", default-features = false }
sp-runtime = { version = "2.0.0", default-features = false }
sp-std = { version = "2.0.0", default-features = false }
sp-io = { version = "2.0.0", default-features = false }
primitive-types = { version = "0.7.0", default-features = false, features = ["rlp", "byteorder"] }
sha3 = { version = "0.8", default-features = false }
impl-trait-for-tuples = "0.1"
ethereum-types = { version = "0.9", default-features = false }
fp-evm = { default-features = false, path = '../../primitives/evm', version = '0.9.0'}
clover-evm = { path = "../../modules/clover-evm", default-features = false }
clover-ethereum = { path = "../../modules/clover-ethereum", default-features = false }
hex-literal = { version = "0.3.1" }

[dev-dependencies]
pallet-balances = { version = "2.0.0", default-features = false }
pallet-timestamp = { version = "2.0.0", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-core/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"sp-io/std",
	"sp-std/std",
	"sha3/std",
	"ethereum-types/std",
	"fp-evm/std",
	"primitive-types/std",
	"clover-evm/std",
	"clover-ethereum/std"
]
