[package]
name = 'clover-incentives'
authors = ['Clover Network <https://github.com/clover-network>']
edition = '2018'
license = 'GPL-3.0'
homepage = 'https://cloverdefi.com'
repository = 'https://github.com/clover-network/clover'
version = '0.9.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
clover-traits = { path = "../traits", default-features = false }
reward-pool = { path = "../reward-pool", default-features = false }
primitives = { default-features = false, package = 'clover-primitives', path = '../../primitives', version = '0.9.0'}

byteorder = { version = "1.1.0", default-features = false }
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false }
num-traits = { version = "0.2", default-features = false}
num-derive= { version = "0.2", default-features = false}
serde = { version = "1.0.101", optional = true }
sp-runtime = { version = "2.0.0", default-features = false }
frame-benchmarking = { version = "2.0.0", default-features = false, optional = true }
frame-support = { version = "2.0.0", default-features = false }
frame-system = { version = "2.0.0", default-features = false }
sp-std = { version = "2.0.0", default-features = false }
pallet-balances = { version = "2.0.0", default-features = false }

orml-currencies = { version = "0.3.2", default-features = false }
orml-tokens = { version = "0.3.2", default-features = false }
orml-traits = { version = "0.3.2", default-features = false }
orml-utilities = { version = "0.3.2", default-features = false }


[dev-dependencies]
sp-core = { version = "2.0.0", default-features = false }
sp-io = { version = "2.0.0", default-features = false }

[features]
default = ['std']
std = [
  'byteorder/std',
  'frame-support/std',
  'frame-system/std',
  'num-traits/std',
  'orml-currencies/std',
  'orml-tokens/std',
  'orml-traits/std',
  'orml-utilities/std',
  'pallet-balances/std',
  'primitives/std',
  'reward-pool/std',
  'serde',
  'sp-runtime/std',
  'sp-std/std',
]
