[package]
name = 'ladder-payment'
authors = ['Clover Network <https://github.com/clover-network>']
edition = '2018'
license = 'GPL-3.0'
homepage = 'https://clover.finance'
repository = 'https://github.com/clover-network/clover'
version = '0.9.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
clover-traits = { path = "../traits", default-features = false }
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true }
sp-std = { version = "2.0.0", default-features = false }
sp-runtime = { version = "2.0.0", default-features = false }
frame-support = { version = "2.0.0", default-features = false }
frame-system = { version = "2.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "2.0.0", default-features = false }
smallvec = "1.5.0"
sp-io = { version = "2.0.0",  default-features = false }
sp-core = { version = "2.0.0",  default-features = false }

[dev-dependencies]
sp-core = { version = "2.0.0", default-features = false }
sp-io = { version = "2.0.0", default-features = false }

[features]
default = ['std']
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"sp-io/std",
	"sp-core/std",
]
