[package]
authors = ['werlandy <422606101@qq.com>']
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'clover-loans'
repository = 'https://github.com/clover-network/clover'
version = '2.0.0-rc6'

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false }
sp-runtime = { version = "2.0.0-rc6", default-features = false }
frame-support = { version = "2.0.0-rc6", default-features = false }
frame-system = { version = "2.0.0-rc6", default-features = false }
sp-std = { version = "2.0.0-rc6", default-features = false }
orml-traits = { version = "2.0.0-rc6", default-features = false }
orml-utilities = { version = "2.0.0-rc6", default-features = false }
orml-rewards = { version = "2.0.0-rc6", default-features = false }

[dev-dependencies]
sp-core = { version = "2.0.0-rc6", default-features = false }
sp-io = { version = "2.0.0-rc6", default-features = false }
pallet-balances = { version = "2.0.0-rc6", default-features = false }
orml-tokens = { version = "2.0.0-rc6", default-features = false }
orml-rewards = { version = "2.0.0-rc6", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"sp-std/std",
	"orml-traits/std",
	"orml-utilities/std",
	"orml-rewards/std",
]
