[package]
name = 'clover-loans'
authors = ['Clover Network <https://github.com/clover-network>']
edition = '2018'
license = 'GPL-3.0'
homepage = 'https://cloverdefi.com'
repository = 'https://github.com/clover-network/clover'
version = '0.9.0'

[dependencies]
primitives = { default-features = false, package = 'clover-primitives', path = '../../primitives', version = '0.9.0'}

serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false }
sp-runtime = { version = "2.0.0", default-features = false }
frame-support = { version = "2.0.0", default-features = false }
frame-system = { version = "2.0.0", default-features = false }
sp-std = { version = "2.0.0", default-features = false }

orml-utilities = {default-features = false, path = "../../orml/utilities" }
orml-traits = {default-features = false, path = "../../orml/traits" }
orml-tokens = {default-features = false, path = "../../orml/tokens" }
orml-rewards = {default-features = false, path = "../../orml/rewards" }

[dev-dependencies]
sp-core = { version = "2.0.0", default-features = false }
sp-io = { version = "2.0.0", default-features = false }
pallet-balances = { version = "2.0.0", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"sp-std/std",
	"orml-traits/std",
	"orml-utilities/std",
	"orml-tokens/std",
	"orml-rewards/std",
]
