[package]
name = 'reward-pool'
authors = ['Clover Network <https://github.com/clover-network>']
edition = '2018'
license = 'GPL-3.0'
homepage = 'https://clover.finance'
repository = 'https://github.com/clover-network/clover'
version = '0.9.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
clover-traits = { path = "../traits", default-features = false }
primitives = { default-features = false, package = 'clover-primitives', path = '../../primitives', version = '0.9.0'}

serde = { version = "1.0.101", optional = true }
byteorder = { version = "1.1.0", default-features = false }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
num-traits = { version = "0.2", default-features = false}
num-derive= { version = "0.2", default-features = false}
sp-runtime = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" , default-features = false }
frame-benchmarking = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" , default-features = false, optional = true }
frame-support = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" , default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" , default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" , default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" , default-features = false }

orml-utilities = { git = 'https://github.com/open-web3-stack/open-runtime-module-library.git', rev = 'fb405b1', default-features = false }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" , default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" , default-features = false }



[features]
default = ['std']
std = [
  'byteorder/std',
  'clover-traits/std',
  'frame-support/std',
  'frame-system/std',
  'num-traits/std',
  'orml-utilities/std',
  'pallet-balances/std',
  'primitives/std',
  'serde',
  'sp-runtime/std',
  'sp-std/std',
]
