[package]
name = "eth-primitives"
version = "0.1.0"
authors = ["Dejavukong <foxcong.yolo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# crates
codec  = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
ethash = { default-features = false,  git = "https://github.com/keylcong/ethash.git" }
serde  = { version = "1.0.118", optional = true, features = ["derive"] }

#array-bytes          = { default-features = false, path = "../array-bytes" }
#merkle-patricia-trie = { default-features = false, path = "../merkle-patricia-trie" }
# common types
ethbloom = { default-features = false, features = ["codec", "rlp"], git = "https://github.com/keylcong/parity-common.git" }
ethereum-types = { default-features = false, features = ["codec", "rlp"], git = "https://github.com/keylcong/parity-common.git" }
fixed-hash = { default-features = false, git = "https://github.com/keylcong/parity-common.git" }
impl-codec = { default-features = false, git = "https://github.com/keylcong/parity-common.git" }
impl-rlp = { default-features = false, git = "https://github.com/keylcong/parity-common.git" }
keccak-hash = { default-features = false, git = "https://github.com/keylcong/parity-common.git" }
primitive-types = { default-features = false, features = ["codec", "rlp"], git = "https://github.com/keylcong/parity-common.git" }
rlp = { default-features = false,git = "https://github.com/keylcong/parity-common.git" }
rlp-derive = { git = "https://github.com/keylcong/parity-common.git" }
merkle-patricia-trie = {default-features = false, git = "https://github.com/keylcong/merkle-patricia-trie.git"}
# substrate
sp-io = { version ="2.0.0",  default-features = false }
sp-runtime = { version ="2.0.0",  default-features = false }
sp-std = { version ="2.0.0", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "ethash/std",
    "serde",
    "ethbloom/std",
    "ethereum-types/std",
    "ethereum-types/serialize",
    "fixed-hash/std",
    "impl-codec/std",
    "impl-rlp/std",
    "keccak-hash/std",
    "primitive-types/std",
    "rlp/std",
    "merkle-patricia-trie/std",
    # substrate
    "sp-std/std",
    "sp-io/std",
    "sp-runtime/std",
]
