[package]
name = "bitdex-rpc-runtime-api"
version = "2.0.0-rc6"
authors = ["pangwa <pangwa@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "Runtime API definition required by System RPC extensions."

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-api = { version = "2.0.0-rc6", default-features = false }
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false }

[features]
default = ["std"]
std = [
	"sp-api/std",
	"codec/std",
]