[package]
name = "fc-rpc-core"
authors = ['Clover Network <https://github.com/clover-network>']
edition = '2018'
license = 'GPL-3.0'
homepage = 'https://cloverdefi.com'
repository = 'https://github.com/clover-network/clover'
version = '0.9.0'

[dependencies]
jsonrpc-core = "15.0.0"
jsonrpc-core-client = "14.0.3"
jsonrpc-derive = "14.0.3"
jsonrpc-pubsub = "15.0.0"
rustc-hex = "2.1.0"
ethereum-types = "0.11.0"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0"
