[package]
name = "fc-rpc"
authors = ['Clover Network <https://github.com/clover-network>']
edition = '2018'
license = 'GPL-3.0'
homepage = 'https://cloverdefi.com'
repository = 'https://github.com/clover-network/clover'
version = '0.9.0'

[dependencies]
jsonrpc-core = "15.0.0"
jsonrpc-derive = "14.0.3"
jsonrpc-core-client = "14.0.3"
jsonrpc-pubsub = "15.0.0"
log = "0.4.8"
ethereum-types = "0.9.0"
fc-consensus = { path = "../consensus" }
fc-rpc-core = { path = "../rpc-core" }
fp-rpc = { path = "../../../primitives/rpc" }
sp-io = { version = "2.0.0" }
sp-runtime = { version = "2.0.0" }
sp-api = { version = "2.0.0" }
sp-transaction-pool = { version = "2.0.0" }
sp-storage = { version = "2.0.0" }
sp-blockchain = { version = "2.0.0" }
sc-service = { version = "0.8.0" }
sc-client-api = { version = "2.0.0" }
sc-rpc = { version = "2.0.0" }
sc-network = { version = "0.8.0" }
clover-evm = { path = "../../../modules/evm" }
clover-ethereum = { path = "../../../modules/ethereum" }
ethereum = { version = "0.5", features = ["with-codec"] }
codec = { package = "parity-scale-codec", version = "1.0.0" }
rlp = "0.4"
futures = { version = "0.3.1", features = ["compat"] }
sha3 = "0.8"
rustc-hex = { version = "2.1.0", default-features = false }
libsecp256k1 = "0.3"
rand = "0.7"